--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: system-ui, sans-serif, 'Segoe UI';
+  font-family: system-ui, Arial, sans-serif, 'Segoe UI';
   margin: 0;
   padding: 0;
   font-size: 14px;
