--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,24 +1,24 @@
 .app-version {
-  font-size: 22px;
+  font-size: 19px;
   margin-left: 15px;
   color: var(--lightTextColor);
 }
 
-.help {
+.about {
   padding: 15px;
 }
 
-.help h1 {
+.about h3 {
   text-align: center;
   margin-bottom: 15px;
 }
 
-.help p {
+.about p {
   margin-top: 10px;
-  font-size: 18px;
+  font-size: 15px;
 }
 
-.help a {
+.about a {
   margin-left: 5px;
   text-decoration: none;
 }
