--- a/src/styles/entityCommonStyles.css
+++ b/src/styles/entityCommonStyles.css
@@ -4,9 +4,8 @@
 .entity-properties .property {
   font-weight: 500;
 }
-.entity-properties .value {
-  padding-left: 5px;
-}
+/* .entity-properties .value {
+} */
 .package-entity .badge, .dependency-entity .badge {
   margin-right: 5px;
 }
