--- a/src/pages/Licenses/Licenses.css
+++ b/src/pages/Licenses/Licenses.css
@@ -1,4 +1,4 @@
-.license-detections-title {
+.licenses-title {
   text-align: center;
   margin: 5px;
   margin-top: 5px;
@@ -24,6 +24,8 @@
 
 .license-entity-pane {
   overflow: auto !important;
+  padding-left: 14px;
+  padding-right: 12px;
 }
 
 .licenses-navigator-container .search-box {
