Implemented close file button, menu item and before new scan import
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -41,14 +41,23 @@
 .drop-instruction {
   text-align: center;
   width: 100%;
-  margin-top: 50px;
+  margin-top: 25px;
   color: var(--lightTextColor);
 }
 
 .quicklinks,
+.currentscan,
 .history {
-  margin-top: 15px;
   padding-left: 2rem;
+}
+
+.currentscan {
+  margin-top: 35px;
+  margin-bottom: 5px;
+}
+
+.quicklinks {
+  margin-top: 10px;
 }
 
 .history table {
