Fixed overflow in grid due to update in ag-grid package
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/src/pages/DependencyInfoDash/dependencyInfoDash.css
+++ b/src/pages/DependencyInfoDash/dependencyInfoDash.css
@@ -26,7 +26,8 @@
   height: auto;
 }
 
-.scope-summary-table .ag-body-viewport {
+.scope-summary-table .ag-body-viewport,
+.scope-summary-table .ag-body {
   height: auto;
   /* Subtract height of horizontal scroll and header from table height */
   max-height: calc(var(--max-scope-summary-table-height) - var(--scope-summary-table-header-height) - var(--scope-summary-table-height));
