Enhance code visibility in dark mode in theme_overrides.css
Signed-off-by: Alok Kumar <alokkumarjipura9973@gmail.com>

--- a/docs/source/_static/theme_overrides.css
+++ b/docs/source/_static/theme_overrides.css
@@ -351,3 +351,9 @@ img {
 .red {
     color: red;
 }
+
+/* Change background for all code blocks */
+div.highlight pre {
+    background-color: #f8f9fa ;
+    color: #212529 ;
+}
